k8s/workloads/networking/traefik/misc/networkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: traefik
  namespace: networking
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
  ingress:
    - fromEndpoints:
        - {}
    - fromCIDRSet:
        - cidr: "${TRAEFIK_ALLOWED_EXT_ADDR}/32"
      toPorts:
        - ports:
            - port: "443"
    - fromCIDRSet:
        - cidr: 10.0.0.0/8
    - fromCIDRSet:
        - cidr: 192.168.0.0/16
    - fromEntities:
        - cluster
